--- a/templates/uploadfile.html
+++ b/templates/uploadfile.html
@@ -1,16 +1,13 @@
 <html>
 <title>
-Upload new File
+File Upload to Azure
 </title>
 <h1>
-Upload new File
+Please select the file to upload:
 </h1>
 <form action="" method=post enctype=multipart/form-data>
 <p>
 <input type=file name=file>
 <input type=submit value=Upload></p>
-<br><p>
-<h1> List of Files in the blob </h1> 
-</p>
 </form>
 </html>
